[package]
name = "rpc_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = { version = "0.6"  }
protobuf = { version = "3.3.0" }
protobuf-codegen = { version = "3.3.0" }
protoc-bin-vendored = { version = "3.0.0" }

[dependencies]
tokio = { version = "1", features = ["full"] }
prost = { version = "0.6" }
protobuf = { version = "3.3.0" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "postgres", "sqlite" ] }
protoc-bin-vendored = { version = "3.0.0" }
tokio-util = { version = "0.7.10", features = [ "codec", "net" ] }
tokio-stream = { version = "0.1.14" }
futures = { version = "0.3.30" }
bytes = "1.5.0"
